<resources>
    <string name="app_name">H2O Healthy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="h2o">H2O</string>
    <string name="healthy">Healthy</string>
    <string name="slogan">Stay hydrated</string>
    <string name="hi">Hey there,</string>
    <string name="create_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="policy_text">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="get_started">Get Started</string>
    <string name="login_title">Welcome Back</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t have an account yet?</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="or">Or</string>
    <string name="next">Next</string>
    <string name="complete_profile_title">Let’s complete your profile</string>
    <string name="complete_profile_description">It will help us to know more about you!</string>
    <string name="welcome">Welcome,</string>
    <string name="go_to_home">Go To Home</string>
    <string name="login_done_text">You are all set now, let’s reach your \n goals together with us</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add">add</string>
    <string name="today_target">Today Target</string>
    <string name="edit">Edit</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="total_score">Total score</string>
    <string name="league">League</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="other">Other</string>
    <string name="add_water">Add water</string>
    <string name="enter_amount">Enter amount (ml)</string>
    <string name="select_cup">Select cup</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="activity_level">Activity level</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_height">Your Height</string>
    <string name="kg">KG</string>
    <string name="cm">CM</string>
    <string name="create_league">Create League</string>
    <string name="enter_league_name">Enter league name</string>
    <string name="join_league">Join League</string>
    <string name="create">Create</string>
    <string name="enter_league_code">Enter league code</string>
    <string name="join">Join</string>
    <string name="league_settings">League Settings</string>
    <string name="rename_league">Rename League</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="leave_league">Leave League</string>
    <string name="remove">Remove</string>
    <string name="enter_new_value">Enter new value</string>
    <string name="my_cups">My Cups</string>
    <string name="add_cup">Add Cup</string>
    <string name="enter_cup_name">Enter cup name</string>
    <string name="select_color">Select color</string>
    <string name="logout">Logout</string>
</resources>