<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="32dp">

    <TextView
        android:id="@+id/_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:padding="4dp"
        android:text="@string/create_league"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/_textView3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/_textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_textView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_textView3">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_league_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/blackText"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:padding="8dp"
        android:text="@string/join_league"
        android:textColor="@color/linearBlueEnd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_cardView"
        app:layout_constraintTop_toBottomOf="@+id/_cardView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:padding="16dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/linearBlueStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJoin" />
</androidx.constraintlayout.widget.ConstraintLayout>
